# HVM

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
HVM/: Cargo.toml  build.rs
HVM/docs/: hook_module_family_conventions.md
HVM/src/: arch.rs  cli.rs  config.rs  environment_profile.rs  error.rs  lib.rs  main.rs  models.rs  samples.rs  tests_support.rs
HVM/src/hooks/: base.rs  family_registration.rs  mod.rs  registry.rs  registry_probe_exports.rs  stub.rs
HVM/src/managers/: crypto_manager.rs  device_manager.rs  file_manager.rs  file_mapping_manager.rs  handle_table.rs  heap_manager.rs  mod.rs  module_manager.rs  network_manager.rs  process_manager.rs  registry_manager.rs  service_manager.rs  time_manager.rs  tls_manager.rs
HVM/src/pe/: imports.rs  (+5 more)
HVM/tests/: advapi32_hooks.rs  cli_smoke.rs  config_compat.rs  engine_last_error.rs  engine_run.rs  environment_profile.rs  file_manager.rs  guid_hooks.rs  hook_compat_batches.rs  hook_registry.rs  human_core_behaviors.rs  inspect_cli.rs  iphlpapi_hooks.rs  kernel32_hooks.rs  manager_backed_hooks.rs  manager_primitives.rs  memory_manager.rs  module_manager.rs  mpr_hooks.rs  msvcrt_hooks.rs  native_execution.rs  netapi32_hooks.rs  ntdll_hooks.rs  pe_runtime_metadata.rs  process_command_line_config.rs  process_environment.rs  process_manager.rs  psapi_hooks.rs  registry_manager.rs  runtime_memory_dumps.rs  sample_catalog.rs  service_hooks.rs  setupapi_cfgmgr32_hooks.rs  shell_execute.rs  shlwapi_hooks.rs  thread_scheduler_core.rs  thread_sync_advanced.rs  thread_wait_objects.rs  winhttp_hooks.rs  ws2_32_hooks.rs  (+1 more)
(+228 files in other folders)
