[package]
name = "hvm-hikari-virtual-engine"
version = "0.1.0"
edition = "2021"
default-run = "hvm-hikari-virtual-engine"
description = "HVM-Hikari Virtual Engine: a Rust virtual execution engine for Windows PE inspection and behavior simulation"

[lib]
name = "hvm"

[dependencies]
clap = { version = "4", features = ["derive"] }
encoding = "0.2"
encoding-index-simpchinese = "1.20141219.5"
goblin = "0.10.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[build-dependencies]
cmake = "0.1"
